syntax = "proto3";

package hub_investments;

import "common.proto";

option go_package = "./proto";

// ====================================
// AUTHENTICATION SERVICE
// ====================================

// AuthService provides authentication operations
service AuthService {
  // Login authenticates a user and returns a JWT token
  rpc Login(LoginRequest) returns (LoginResponse);
  // ValidateToken validates a JWT token and returns user info
  rpc ValidateToken(ValidateTokenRequest) returns (ValidateTokenResponse);
}

// ====================================
// AUTHENTICATION SERVICE MESSAGES
// ====================================

message LoginRequest {
  string email = 1;
  string password = 2;
}

message LoginResponse {
  APIResponse api_response = 1;
  string token = 2;
  UserInfo user_info = 3;
}

message ValidateTokenRequest {
  string token = 1;
}

message ValidateTokenResponse {
  APIResponse api_response = 1;
  bool is_valid = 2;
  UserInfo user_info = 3;
  int64 expires_at = 4;
}
